--- a/src/MyLab.BlazorClient/MyLab.BlazorClient.csproj
+++ b/src/MyLab.BlazorClient/MyLab.BlazorClient.csproj
@@ -11,10 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="5.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="5.0.10" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\css\" />
+    <Folder Include="Properties\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
