Change theme to dark blue

--- a/src/MyLab.BlazorClient/MyLab.BlazorClient.csproj
+++ b/src/MyLab.BlazorClient/MyLab.BlazorClient.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <Folder Include="Properties\" />
     <Folder Include="Services\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
 </Project>
